--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.5.0",
+    "@types/clean-css": "^4.2.11",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "clean-css": "^5.3.1",
@@ -32,7 +33,8 @@
     "build-with-best-roadroller": "cross-env USE_RR_CONFIG=true vite build",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore src",
     "vite": "vite serve",
-    "tsc": "tsc --watch --noEmit"
+    "tsc": "tsc --watch --noEmit",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "author": "Rob Louie"
 }
