--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cross-env": "^7.0.3",
     "ect-bin": "^1.4.1",
     "eslint": "^8.34.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "google-closure-compiler": "^20230206.0.0",
     "html-minifier": "^4.0.0",
