--- a/roadroller-config.json
+++ b/roadroller-config.json
@@ -1,3 +1,22 @@
 {
-  "allowFreeVars": true
+  "allowFreeVars": true,
+  "numAbbreviations": 33,
+  "dynamicModels": 0,
+  "recipLearningRate": 1333,
+  "modelMaxCount": 4,
+  "modelRecipBaseCount": 61,
+  "sparseSelectors": [
+    0,
+    1,
+    2,
+    3,
+    6,
+    7,
+    13,
+    21,
+    42,
+    113,
+    409,
+    419
+  ]
 }
